logs/occi.log
Listing '.'...
Listing './bin'...
Compiling './bin/occi_iaas_demo.py'...
***   File "./bin/occi_iaas_demo.py", line 81
    print "%s listen=%s port=%s" % (occi.http.version_string,
                               ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/occi'...
Listing './lib/python3.5/site-packages/occi/ext'...
Listing './lib/python3.5/site-packages/occi/http'...
Compiling './lib/python3.5/site-packages/occi/http/handler.py'...
***   File "./lib/python3.5/site-packages/occi/http/handler.py", line 117
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/occi/http/header.py'...
***   File "./lib/python3.5/site-packages/occi/http/header.py", line 214
    except IndexError, ValueError:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/occi/http/parser.py'...
***   File "./lib/python3.5/site-packages/occi/http/parser.py", line 204
    except KeyError, ValueError:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/occi-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
